--- a/style.css
+++ b/style.css
@@ -42,17 +42,17 @@ body {
 		  text-decoration:none;
 }
 form, .content {
-	width: 30%;
-	margin: 0px auto;
-	padding: 20px;
-	border: 1px solid #B0C4DE;
+	width: 60.5%;
+	left:240px;
+	margin:  223px auto 0px;
+	padding: 60px
+	;
+	border-radius: 100px 100px 100px 100px;
 	background: white;
-	border-radius: 0px 0px 100px 10px;
-	  -moz-opacity: 0.9;
-		  -khtml-opacity: 0.9;
-		  opacity: 0.8;
-		  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=90);
-		  text-decoration:none;
+	height: auto;
+
+
+	
 }
 .input-group {
 	margin: 10px 0px 10px 0px;
@@ -94,4 +94,22 @@ form, .content {
 	background: #dff0d8; 
 	border: 1px solid #3c763d;
 	margin-bottom: 20px;
+}
+#container {
+width:960px;
+}
+.header, .navigation {
+width: 100%;
+float:left;
+height: 80px;
+}
+.sidebar {
+width: 200px;
+float:left;
+min-height: 500px;
+}
+.content {
+width: 760px;
+float: left;
+min-height: 500px;
 }
